Верстка главной страницы

--- a/blocks/element/__button-like/element__button-like.css
+++ b/blocks/element/__button-like/element__button-like.css
@@ -1,14 +1,8 @@
 .element__button-like {
-    background-image: url(../../../images/icon__like.svg);
     background-color: transparent;
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: contain;
-    height: 19px;
+    background-image: url(../../../images/like.svg);
+    background-position: center;
+    border: none;
     width: 22px;
-    border: 0;
-}
-
-.element__button-like:active {
-    background-image: url(../../../images/icon__like_active.svg);
+    height: 19px;
 }
