--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,25 +1,5 @@
 .footer {
-  margin: 0 auto;
-  padding: 43px 0 60px;
-  width: calc(100% - 400px);
-}
-
-@media screen and (max-width: 1024px) {
-  .footer {
-      width: calc(100% - 148px);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .footer {
-      width: calc(100% - 96px);
-      padding: 48px 0 36px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .footer {
-      width: calc(100% - 38px);
-      padding: 21px 0 10px;
-  }
+    margin: 67px auto 60px;
+    padding: 0;
+    max-width: calc(100% - 400px);
 }
