--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,5 @@
     padding: 0;
     background-color: #000;
     color: #fff;
-    font-family: 'Inter', Arial, Helvetica, sans-serif;
-}
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+  }
