--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,5 @@
 .profile__avatar {
-    width: 120px;
-    height: 120px;
     border-radius: 50%;
-    position: relative;
-    overflow: hidden;
+    max-width: 120px;
+    max-height: 120px;
 }
