--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,23 +1,11 @@
 .profile__name {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 42px;
-  line-height: 48px;
-  margin: 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-@media screen and (max-width: 768px) {
-  .profile__name {
-      text-align: center;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .profile__name {
-      font-size: 27px;
-      line-height: 33px;
-  }
+    font-style: normal;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 48px;
+    margin: 0;
+    padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
