--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,3 +6,10 @@
     grid-template-columns:repeat(auto-fill, minmax(282px, 1fr));
     gap: 27px 17px;
 }
+
+@media screen and (max-width: 425px) {
+    .elements {
+        margin-top: 36px;
+    }
+  }
+  
