--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,3 +5,10 @@
     max-height: 33px;
     margin-bottom: 41px;
 }
+
+@media screen and (max-width: 425px) {
+    .header__logo {
+        max-width: 104px;
+        max-height: 25px;
+    }
+  }
