--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,24 @@ header {
     max-width: calc(100% - 400px);
     margin-top: 45px;
 }
+
+@media screen and (max-width: 1024px) {
+    .header {
+        max-width: calc(100% - 148px);
+    }
+  }
+
+@media screen and (max-width: 768px) {
+    .header {
+        max-width: calc(100% - 96px);
+    }
+  }
+  
+  @media screen and (max-width: 425px) {
+    .header {
+        box-sizing: border-box;
+        max-width:calc(100% - 54px);
+        margin-top: 28px;
+    }
+  }
+  
