--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,14 +1,27 @@
 .profile__button-add {
     background-color: transparent;
-    background-image: url(../../../images/Add\ Button.svg);
-    background-position: center;
+    background-image: url(../../../images/Add_button.svg);
+    background-position: 50%;
     border: 2px solid #FFFFFF;
     border-radius: 2px;
     width: 150px;
     height: 50px;
     transition: opacity 0.3s;
+    background-repeat: no-repeat;
 }
 
 .profile__button-add:hover {
     opacity: 0.6;
 }
+
+@media screen and (max-width: 740px) {
+    .profile__button-add {
+        width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    .profile__button-add {
+        background-size: 16px 16px;
+    }
+  }  
