--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -11,3 +11,10 @@
 .profile__edit:hover {
     opacity: 0.6;
 }
+
+@media screen and (max-width: 425px) {
+    .profile__edit {
+        width: 18px;
+        height: 18px;
+    }
+  }  
