--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,19 @@
     flex-grow: 1;
     margin-left: 30px;
 }
+
+@media screen and (max-width: 740px) {
+    .profile__info {
+        max-width: 100%;
+        margin-bottom: 11px;
+    }   
+  }
+  
+  @media screen and (max-width: 425px) {
+    .profile__info {
+        margin-top: 26px;
+        margin-bottom: 32px;
+        gap: 8px; 
+    }
+  }
+  
