--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -9,3 +9,17 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+@media screen and (max-width: 740px) {
+    .profile__name {
+        text-align: center;
+    }
+  }
+  
+  @media screen and (max-width: 425px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
+    }
+  }
+  
