--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -3,10 +3,25 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    margin: 0;
     padding: 0;
     margin-top: 8px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
+
+@media screen and (max-width: 740px) {
+    .profile__profession {
+        text-align: center;
+    }
+  }
+  
+  @media screen and (max-width: 425px) {
+    .profile__profession {
+        margin: 0;
+        margin-right: 32px;
+        font-size: 14px;
+        line-height: 17px;
+    }
+  }
+  
