--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,16 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 740px) {
+    .profile {
+        flex-direction: column;
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    .profile {
+        margin-top: 28px;
+    }
+  }
+  
