--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,6 +1,6 @@
 .popup__button-close {
     background-color: transparent;
-    background-image: url(../../../images/Close\ Icon.svg);
+    background-image: url(../../../images/Close_Icon.svg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 50%;
