--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -2,7 +2,7 @@
     background-color: transparent;
     background-image: url(../../../images/Add_button.svg);
     background-position: 50%;
-    border: 2px solid #FFFFFF;
+    border: 2px solid #ffffff;
     border-radius: 2px;
     width: 150px;
     height: 50px;
@@ -18,10 +18,10 @@
     .profile__button-add {
         width: 100%;
     }
-  }
+}
 
-  @media screen and (max-width: 425px) {
+@media screen and (max-width: 425px) {
     .profile__button-add {
         background-size: 16px 16px;
     }
-  }  
+}
