--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,8 +1,8 @@
 .profile__edit {
     background-color: transparent;
-    background-image: url(../../../images/Edit\ Button.svg);
+    background-image: url(../../../images/Edit_Button.svg);
     background-position: center;
-    border: 1px solid #FFFFFF;
+    border: 1px solid #ffffff;
     width: 24px;
     height: 24px;
     transition: opacity 0.3s;
@@ -17,4 +17,4 @@
         width: 18px;
         height: 18px;
     }
-  }  
+}
