--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,13 @@
 .popup__container {
     margin: 0 auto;
-    position: relative;
+    padding: 34px 36px 37px;
+    width: calc(100% - 400px);
+    max-width: 430px;
     background-color: #fff;
     color: #000;
-    display: flex;
-    flex-direction: column;
-    max-width: 430px;
     border-radius: 10px;
+    box-sizing: border-box;
+    position: relative;
 }
 
 @media screen and (max-width: 1024px) {
@@ -24,5 +25,6 @@
 @media screen and (max-width: 425px) {
     .popup__container {
         width: calc(100% - 38px);
+        padding: 25px 22px 25px;
     }
 }
