--- a/blocks/popup/__edit-profile/popup__edit-profile.css
+++ b/blocks/popup/__edit-profile/popup__edit-profile.css
@@ -1,9 +1,9 @@
 .popup__edit-profile {
+    margin: 0;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 34px 36px 54px;
 }
 
 @media screen and (max-width: 425px) {
