--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -3,9 +3,10 @@
     background-image: url(../../../images/Edit_Button.svg);
     background-position: center;
     border: 1px solid #ffffff;
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     transition: opacity 0.3s;
+    cursor: pointer;
 }
 
 .profile__edit:hover {
@@ -14,7 +15,7 @@
 
 @media screen and (max-width: 425px) {
     .profile__edit {
-        width: 18px;
+        min-width: 18px;
         height: 18px;
     }
 }
