--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     flex-grow: 1;
     margin-left: 30px;
+    max-width: calc(100% - 320px);
 }
 
 @media screen and (max-width: 740px) {
