--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
-@import url(../vendors/normalize.css);
-@import url(../vendors/fonts/Inter/inter.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts/Inter/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -25,7 +25,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__edit-profile/popup__edit-profile.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__profession/popup__profession.css);
-@import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input-block/popup__input-block.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
+@import url(../blocks/popup/__button-save/popup__button-save.css);
