--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,6 @@
 .elements {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 51px;
     padding: 0;
     display: grid;
