--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
-header {
-  border-bottom: 1px solid #545454;
-  margin: 0 auto;
+.header {
+  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
+  margin-left: auto;
+  margin-right: auto;
   max-width: calc(100% - 400px);
   margin-top: 45px;
 }
