--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,9 @@
 .page {
-  margin: 0;
+  margin: auto;
   padding: 0;
   background-color: #000;
   color: #fff;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   max-width: 1280px;
+  width: 100%;
 }
