--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -8,21 +8,20 @@
     width: 32px;
     border: 0;
     position: absolute;
-    transform: translate(calc(100% + 10px), calc(-100% - 10px));
-    top: 0;
-    right: 0;
+    top: -40px;
+    right: -40px;
     transition: opacity 0.3s;
     cursor: pointer;
 }
 
 .popup__button-close:hover {
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 425px) {
     .popup__button-close {
         height: 20px;
         width: 20px;
-        transform: translateY(calc(-100% - 16px));
+        right: 0;
     }
 }
