--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,4 +2,8 @@
     border-radius: 50%;
     max-width: 120px;
     max-height: 120px;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
 }
