--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,6 +2,8 @@
     background-color: transparent;
     background-image: url(../../../images/Edit_Button.svg);
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: 50% 50%;
     border: 1px solid #ffffff;
     min-width: 24px;
     height: 24px;
