--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -1,4 +1,5 @@
 .profile__profession {
+    margin-bottom: 0;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -18,7 +19,6 @@
 
 @media screen and (max-width: 425px) {
     .profile__profession {
-        margin: 0;
         margin-right: 32px;
         font-size: 14px;
         line-height: 17px;
