--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -4,3 +4,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width: 425px) {
+    .popup__form {
+        padding-top: 31px;
+    }
+}
