--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,8 +8,15 @@
     line-height: 17px;
     border: 0;
     border-bottom: 1px solid rgba(0,0,0, 0.2);
+    width: 100%;
 }
 
 .popup__input:last-child {
     margin: 0;
+}
+
+@media screen and (max-width: 425px) {
+    .popup__input {
+        margin-top: 38px;
+    }
 }
