--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    margin-left: 30px;
     max-width: calc(100% - 320px);
 }
 
@@ -15,8 +14,10 @@
 
 @media screen and (max-width: 425px) {
     .profile__info {
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 26px;
-        margin-bottom: 32px;
+        margin-bottom: 28px;
         gap: 8px;
     }
 }
