--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -21,7 +21,7 @@
 @media screen and (max-width: 425px) {
   .header {
       box-sizing: border-box;
-      max-width: calc(100% - 54px);
+      max-width: 100%;
       margin: 0;
       padding-top: 28px;
       padding-left: 27px;
