--- a/blocks/popup/__input-block/popup__input-block.css
+++ b/blocks/popup/__input-block/popup__input-block.css
@@ -1,10 +1,12 @@
 .popup__input-block {
-    padding-bottom: 48px;
+    padding-bottom: 32px;
+    padding-left: 0;
+    padding-right: 0;
     border: none;
 }
 
 @media screen and (max-width: 425px) {
     .popup__input-block {
-        padding-bottom: 45px;
+        padding-bottom: 33px;
     }
 }
