--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,12 +1,21 @@
 .popup__form {
+    padding: 34px 36px 37px;
+    width: 430px;
+    min-height: 330px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+    box-sizing: border-box;
     margin: 0;
-    padding-top: 54px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
     .popup__form {
-        padding-top: 31px;
+        width: 282px;
+        min-height: 322px;
+        padding: 25px 22px;
     }
 }
