--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,10 +2,13 @@
     position: fixed;
     align-items: center;
     background-color: rgba(0,0,0, 0.5);
-    display: none;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
     justify-content: center;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
+    transition: all 0.5s;
 }
