Добавление карточек, зум картинок. Отправка на ревью

--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,4 @@
 @import url(../blocks/popup/_type/popup_type_images.css);
 @import url(../blocks/popup/__container-images/popup__container-images.css);
 @import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-name/popup__image-name.css);
