--- a/pages/index.css
+++ b/pages/index.css
@@ -31,7 +31,11 @@
 @import url(../blocks/popup/__input-block/popup__input-block.css);
 @import url(../blocks/popup/__button-close/popup__button-close.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__button-save/_disabled/popup__button-save_disabled.css);
 @import url(../blocks/popup/_type/popup_type_images.css);
 @import url(../blocks/popup/__container-images/popup__container-images.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-name/popup__image-name.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
