--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,11 @@
 .popup__container {
+    padding: 34px 36px 37px;
+    width: 430px;
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin: 0;
     position: relative;
 }
 
