--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,22 +9,21 @@
     position: relative;
 }
 
-/* @media screen and (max-width: 1024px) { 
+@media screen and (max-width: 1024px) { 
     .popup__container {
-        width: calc(100% - 144px);
+        max-width: calc(100% - 144px);
     }
 }
 
 @media screen and (max-width: 768px) {
     .popup__container {
-        width: calc(100% - 96px);
+        max-width: calc(100% - 96px);
     }
 }
 
 @media screen and (max-width: 425px) {
     .popup__container {
-        width: calc(100% - 38px);
+        max-width: calc(100% - 38px);
         padding: 25px 22px 25px;
     }
 }
-*/
