--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -4,10 +4,8 @@
     padding-top: 54px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
     .popup__form {
-        width: 282px;
-        padding: 25px 22px;
-        row-gap: 33px;
+      padding-top: 63px;
     }
 }
